--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.4.1",
     "shortid": "^2.2.16",
+    "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
